[gd_scene load_steps=6 format=3 uid="uid://b1eqbeh55eyfi"]

[ext_resource type="Script" path="res://addons/god_plot/example/example.gd" id="1_dxxyd"]
[ext_resource type="Script" path="res://addons/god_plot/tools/graphs/graph_2d.gd" id="1_jlmqc"]
[ext_resource type="Script" path="res://addons/god_plot/tools/series/series_types/series_2d/scatter_series.gd" id="3_tmo5p"]
[ext_resource type="Script" path="res://addons/god_plot/tools/graphs/histogram.gd" id="4_divu8"]
[ext_resource type="Script" path="res://addons/god_plot/tools/series/series_types/histogram_series.gd" id="5_w138o"]

[node name="MainTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dxxyd")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer2" type="HSplitContainer" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Graph2D" type="Control" parent="VSplitContainer/HSplitContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_jlmqc")
background_color = Color(1, 1, 1, 1)
title = "Example Chart"
horizontal_title = "Horizontal Title"
vertical_title = "Vertical Title"
font_color = Color(0, 0, 0, 1)
axis_color = Color(0, 0, 0, 1)

[node name="ScatterSeries" type="Node" parent="VSplitContainer/HSplitContainer2/Graph2D"]
unique_name_in_owner = true
script = ExtResource("3_tmo5p")
size = 4.0
shape = 1
stroke = 1.0
data = PackedVector2Array(0, 0, 5, 5)
color = Color(0.641681, 0, 0.0959515, 1)

[node name="Histogram" type="Control" parent="VSplitContainer/HSplitContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("4_divu8")
outlier_behavior = 1
x_max = 100.0
x_decimal_places = 0
y_max = 50.0
y_decimal_places = 0
title = "Random Numbers"
horizontal_title = "Value"
vertical_title = "Frequency"

[node name="HistogramSeries" type="Node" parent="VSplitContainer/HSplitContainer2/Histogram"]
unique_name_in_owner = true
script = ExtResource("5_w138o")
data = Array[float]([0.0, 0.0])

[node name="HSplitContainer" type="HSplitContainer" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Graph2D2" type="Control" parent="VSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_jlmqc")

[node name="ColorRect2" type="ColorRect" parent="VSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.00134256, 0.256689, 0.890407, 1)
